--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -114,3 +114,25 @@
 .accordion-button:hover{
     color: #0e7447;
 }
+
+.alert-dark {
+    border-color: transparent;
+    background-color: #f1f1f1;
+}
+
+.accordion-button {
+padding: 1rem 1rem 1rem 0;
+}
+
+a {
+    color: #0d6efd;
+    text-decoration: none;;
+}
+
+.react-card-flip{
+    margin-bottom: 20px;
+}
+
+.panel-title{
+    display: flex;
+}
